# secure-encrypto

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SECURITY.md  SHA256SUMS.txt  install.sh  install_windows.bat  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests.yml
data/: common_passwords.txt
secure_encrypto/: __init__.py
secure_encrypto/core/: engine.py  environment.py  secure_wipe.py
secure_encrypto/ui/: app.py  theme.py
secure_encrypto/ui/views/: about_view.py  decrypt_view.py  encrypt_view.py  hash_view.py  security_view.py
secure_encrypto/utils/: logger.py  password_strength.py
tests/: test_engine.py  test_password_strength.py  test_security_extra.py
